fix(nav.yml): rewrite clean YAML; trigger rebuild

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,15 +1,10 @@
-- label: Mission
+﻿- label: Home
   url: /
 - label: Threat Assessment
   url: /threat-assessment.html
 - label: Armoury
-    url: /armoury.html
+  url: /armoury.html
 - label: Training
-    url: /training.html
+  url: /training.html
 - label: Contact
   url: /contact.html
-
-
-
-
-
